src/test/resources/de/monticore/umlcd4a/cocos/ebnf/valid/C4A13.cd
package de.monticore.umlcd4a.cocos.ebnf.valid;

classdiagram C4A13 {
  class T1;
  class T2;
  
  class C1 {
    String attr;
  }
  class C2 extends C1 {
    String attr;
  }
  
  class C4 {
    int attr;
  }
  class C5 extends C4 {
    int attr;
  }
  
  class C7 {
    T1 t1;
  }
  class C8 extends C7 {
    T1 t1;
  }
}
