src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/C4A10.cd
/* (c) https://github.com/MontiCore/monticore */

package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram C4A10 {
  enum E;
  class C;
  
  class C1 implements E;
  class C2 implements C;

  enum E1 implements E;
  enum E2 implements C;
}
